<?xml version="1.0"?>
<package>
  <name>nj_costmap</name>
  <version>0.1.2</version>
  <description>The nj_costmap package implements a navigation jockey for the
	  Large Maps framework (LaMa) based on a local costmap (costmap position is
	  relative to the sensor but orientation is absolute).
  </description>

  <maintainer email="gael.ecorchard@ciirc.cvut.cz">Gaël Ecorchard</maintainer>


  <license>BSD</license>


  <url type="website">http://wiki.ros.org/nj_costmap</url>
  <url type="repository">https://github.com/lama-imr/lama_costmap.git</url>
  <url type="bugtracker">https://github.com/lama-imr/lama_costmap/issues</url>


  <author email="gael.ecorchard@ciirc.cvut.cz">Gaël Ecorchard</author>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>crossing_detector</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>goto_crossing</build_depend>
  <build_depend>lama_jockeys</build_depend>
  <build_depend>lama_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>nj_oa_costmap</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>visualization_msgs</build_depend>

  <run_depend>crossing_detector</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>goto_crossing</run_depend>
  <run_depend>lama_jockeys</run_depend>
  <run_depend>lama_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>nj_oa_costmap</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>visualization_msgs</run_depend>


  <export>
  </export>
</package>
