<?xml version="1.0"?>
<package>
  <name>lj_costmap</name>
  <version>0.1.2</version>
  <description>The lj_costmap package implements a localizing jockey for the
	  Large Maps framework (LaMa) based on a local costmap (costmap position is
	  relative to the sensor but orientation is absolute).

	  Implement a localizing jockey from a LaserScan. The associated
	  descriptors are LaserScan[] and Crossing.
  </description>

  <maintainer email="gael.ecorchard@ciirc.cvut.cz">Gaël Ecorchard</maintainer>


  <license>BSD</license>


  <url type="website">http://wiki.ros.org/lj_costmap</url>
  <url type="repository">https://github.com/lama-imr/lama_costmap.git</url>
  <url type="bugtracker">https://github.com/lama-imr/lama_costmap/issues</url>


  <author email="gael.ecorchard@ciirc.cvut.cz">Gaël Ecorchard</author>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>crossing_detector</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>lama_interfaces</build_depend>
  <build_depend>lama_jockeys</build_depend>
  <build_depend>lama_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>polygon_matcher</build_depend>
  <build_depend>roscpp</build_depend>

  <run_depend>crossing_detector</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>lama_interfaces</run_depend>
  <run_depend>lama_jockeys</run_depend>
  <run_depend>lama_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>polygon_matcher</run_depend>
  <run_depend>roscpp</run_depend>


  <export>
  </export>
</package>
